--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,22 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
+    "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.7.0",
     "mongoose": "^6.3.6",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "stripe": "^9.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
