--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
-    "cloudinary": "^1.30.0",
+    "cloudinary": "^1.30.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "engines": "^0.4.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
@@ -25,6 +26,6 @@
     "stripe": "^9.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.19"
   }
 }
